<resources>
    <string name="app_name">ROOMIE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">" Login"</string>
    <string name="prompt_password">" Hasło"</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="welcome">"Witaj "</string>
    <string name="invalid_username">Wpisz poprawny  login</string>
    <string name="invalid_password">Hasło nie może być puste</string>
    <string name="login_failed">"Logowanie nie powiodło się"</string>

    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="plus">+</string>
    <string name="name">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="phone">Numer telefonu</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>

</resources>