<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F6F6"
    android:weightSum="2"
    tools:context=".EditUserFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        android:gravity="top"
        android:layout_weight="1"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dc003a"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:background="#dc003a"
                android:drawableStart="@drawable/back32"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:background="#dc003a"
                android:drawableStart="@drawable/exit"
                android:scaleX="1.7"
                android:scaleY="1.7" />

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"

        android:layout_marginTop="200dp"
        android:id="@+id/lay_main"
        android:layout_width="409dp"
        android:layout_height="219dp"
        android:gravity="bottom"

        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="72dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#dc003a"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:tag="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#dc003a"
                android:ems="10"
                android:hint="@string/nazwisko"
                android:inputType="textPersonName"
                android:tag="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="#dc003a"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:tag="phone"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>